--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-search-box": "0.0.10",
-    "styled-components": "^3.2.3"
+    "redux": "^3.7.2",
+    "styled-components": "^3.2.3",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
